[package]
name = "codemaker_python"
version = "0.0.1"
authors = ["Ryan Kelly <ryan@rfk.id.au>"]
description = "A structured builder for generating Python source code"
repository = "https://github.com/rfk/codemaker"
license = "Apache-2.0 / MIT"
edition = "2018"

[dependencies]
codemaker = { path = "../codemaker", version = "0.0.1"}
